rnc/src/snapshots/muffy_rnc__tests____Users__raviqqe__worktree__github.com__raviqqe__muffy__46df65f5c88d1450__vendor__validator__schema__svg11__svg-style.rnc.snap
---
source: rnc/src/lib.rs
expression: parse_schema(&read_to_string(&path).unwrap()).unwrap()
---
Schema {
    declarations: [
        DefaultNamespace(
            "http://www.w3.org/2000/svg",
        ),
        Namespace(
            NamespaceDeclaration {
                prefix: "a",
                uri: "http://relaxng.org/ns/compatibility/annotations/1.0",
            },
        ),
    ],
    body: Pattern(
        Grammar(
            Grammar {
                items: [
                    Definition(
                        Definition {
                            name: "ClassList.datatype",
                            combine: None,
                            pattern: Name(
                                Name {
                                    prefix: Some(
                                        "xsd",
                                    ),
                                    local: "string",
                                },
                            ),
                        },
                    ),
                    Definition(
                        Definition {
                            name: "StyleSheet.datatype",
                            combine: None,
                            pattern: Name(
                                Name {
                                    prefix: Some(
                                        "xsd",
                                    ),
                                    local: "string",
                                },
                            ),
                        },
                    ),
                    Definition(
                        Definition {
                            name: "MediaDesc.datatype",
                            combine: None,
                            pattern: Name(
                                Name {
                                    prefix: Some(
                                        "xsd",
                                    ),
                                    local: "string",
                                },
                            ),
                        },
                    ),
                    Annotation(
                        Annotation {
                            name: Name {
                                prefix: Some(
                                    "a",
                                ),
                                local: "documentation",
                            },
                            attributes: [],
                        },
                    ),
                    Definition(
                        Definition {
                            name: "SVG.Style.extra.attrib",
                            combine: None,
                            pattern: Empty,
                        },
                    ),
                    Definition(
                        Definition {
                            name: "SVG.Style.attrib",
                            combine: Some(
                                Interleave,
                            ),
                            pattern: Group(
                                [
                                    Optional(
                                        Attribute {
                                            name_class: Name(
                                                Name {
                                                    prefix: None,
                                                    local: "style",
                                                },
                                            ),
                                            pattern: Name(
                                                Name {
                                                    prefix: None,
                                                    local: "StyleSheet.datatype",
                                                },
                                            ),
                                        },
                                    ),
                                    Optional(
                                        Attribute {
                                            name_class: Name(
                                                Name {
                                                    prefix: None,
                                                    local: "class",
                                                },
                                            ),
                                            pattern: Name(
                                                Name {
                                                    prefix: None,
                                                    local: "ClassList.datatype",
                                                },
                                            ),
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.Style.extra.attrib",
                                        },
                                    ),
                                ],
                            ),
                        },
                    ),
                    Annotation(
                        Annotation {
                            name: Name {
                                prefix: Some(
                                    "a",
                                ),
                                local: "documentation",
                            },
                            attributes: [],
                        },
                    ),
                    Definition(
                        Definition {
                            name: "SVG.Style.extra.class",
                            combine: None,
                            pattern: NotAllowed,
                        },
                    ),
                    Definition(
                        Definition {
                            name: "SVG.Style.class",
                            combine: Some(
                                Choice,
                            ),
                            pattern: Choice(
                                [
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "style",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.Style.extra.class",
                                        },
                                    ),
                                ],
                            ),
                        },
                    ),
                    Annotation(
                        Annotation {
                            name: Name {
                                prefix: Some(
                                    "a",
                                ),
                                local: "documentation",
                            },
                            attributes: [],
                        },
                    ),
                    Definition(
                        Definition {
                            name: "SVG.style.content",
                            combine: None,
                            pattern: Text,
                        },
                    ),
                    Definition(
                        Definition {
                            name: "style",
                            combine: None,
                            pattern: Element {
                                name_class: Name(
                                    Name {
                                        prefix: None,
                                        local: "style",
                                    },
                                ),
                                pattern: Group(
                                    [
                                        Name(
                                            Name {
                                                prefix: None,
                                                local: "attlist.style",
                                            },
                                        ),
                                        Name(
                                            Name {
                                                prefix: None,
                                                local: "SVG.style.content",
                                            },
                                        ),
                                    ],
                                ),
                            },
                        },
                    ),
                    Definition(
                        Definition {
                            name: "attlist.style",
                            combine: Some(
                                Interleave,
                            ),
                            pattern: Group(
                                [
                                    Optional(
                                        Attribute {
                                            name_class: Name(
                                                Name {
                                                    prefix: Some(
                                                        "xml",
                                                    ),
                                                    local: "space",
                                                },
                                            ),
                                            pattern: Value {
                                                name: Some(
                                                    Name {
                                                        prefix: None,
                                                        local: "string",
                                                    },
                                                ),
                                                value: "preserve",
                                            },
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.id.attrib",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.base.attrib",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.lang.attrib",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.Core.extra.attrib",
                                        },
                                    ),
                                    Optional(
                                        Attribute {
                                            name_class: Name(
                                                Name {
                                                    prefix: None,
                                                    local: "type",
                                                },
                                            ),
                                            pattern: Name(
                                                Name {
                                                    prefix: None,
                                                    local: "ContentType.datatype",
                                                },
                                            ),
                                        },
                                    ),
                                    Optional(
                                        Attribute {
                                            name_class: Name(
                                                Name {
                                                    prefix: None,
                                                    local: "media",
                                                },
                                            ),
                                            pattern: Name(
                                                Name {
                                                    prefix: None,
                                                    local: "MediaDesc.datatype",
                                                },
                                            ),
                                        },
                                    ),
                                    Optional(
                                        Attribute {
                                            name_class: Name(
                                                Name {
                                                    prefix: None,
                                                    local: "title",
                                                },
                                            ),
                                            pattern: Name(
                                                Name {
                                                    prefix: None,
                                                    local: "Text.datatype",
                                                },
                                            ),
                                        },
                                    ),
                                ],
                            ),
                        },
                    ),
                ],
            },
        ),
    ),
}
